mengupdate form login

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TubesIMPL
 excludes=
+file.reference.jcalendar-1.4.jar=F:\\IF UNJANI Sems.5\\IMPL\\Kelompok 1\\TubesPo1_Kelompok4\\Library\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=F:\\IF UNJANI Sems.5\\IMPL\\Kelompok 1\\TubesPo1_Kelompok4\\Library\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-8.0.25.jar=F:\\IF UNJANI Sems.5\\IMPL\\Kelompok 1\\TubesPo1_Kelompok4\\Library\\mysql-connector-java-8.0.25.jar
+file.reference.rs2xml.jar=F:\\IF UNJANI Sems.5\\IMPL\\Kelompok 1\\TubesPo1_Kelompok4\\Library\\rs2xml.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.mysql-connector-java-8.0.25.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
