update class Home

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,15 +36,19 @@ excludes=
 file.reference.jcalendar-1.4.jar=D:\\IAO\\Kuliah\\Semester 3\\Teori\\Pemrograman Objek\\tubes\\TubesPo1_Kelompok4\\Library\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Ihsan Maulana\\Documents\\Semester_5\\Implementasi Perangkat Lunak\\Tubes\\TubesPo1_Kelompok4\\Library\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=F:\\IF UNJANI Sems.5\\IMPL\\Kelompok 1\\TubesPo1_Kelompok4\\Library\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-3=C:\\Users\\ASUS\\Downloads\\TubesPo1_Kelompok4\\TubesPo1_Kelompok4\\Library\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=D:\\IAO\\Kuliah\\Semester 3\\Teori\\Pemrograman Objek\\tubes\\TubesPo1_Kelompok4\\Library\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar-1=C:\\Users\\Ihsan Maulana\\Documents\\Semester_5\\Implementasi Perangkat Lunak\\Tubes\\TubesPo1_Kelompok4\\Library\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar-2=F:\\IF UNJANI Sems.5\\IMPL\\Kelompok 1\\TubesPo1_Kelompok4\\Library\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar-3=C:\\Users\\ASUS\\Downloads\\TubesPo1_Kelompok4\\TubesPo1_Kelompok4\\Library\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-8.0.25.jar=D:\\IAO\\Kuliah\\Semester 3\\Teori\\Pemrograman Objek\\tubes\\TubesPo1_Kelompok4\\Library\\mysql-connector-java-8.0.25.jar
 file.reference.mysql-connector-java-8.0.25.jar-1=C:\\Users\\Ihsan Maulana\\Documents\\Semester_5\\Implementasi Perangkat Lunak\\Tubes\\TubesPo1_Kelompok4\\Library\\mysql-connector-java-8.0.25.jar
 file.reference.mysql-connector-java-8.0.25.jar-2=F:\\IF UNJANI Sems.5\\IMPL\\Kelompok 1\\TubesPo1_Kelompok4\\Library\\mysql-connector-java-8.0.25.jar
+file.reference.mysql-connector-java-8.0.25.jar-3=C:\\Users\\ASUS\\Downloads\\TubesPo1_Kelompok4\\TubesPo1_Kelompok4\\Library\\mysql-connector-java-8.0.25.jar
 file.reference.rs2xml.jar=D:\\IAO\\Kuliah\\Semester 3\\Teori\\Pemrograman Objek\\tubes\\TubesPo1_Kelompok4\\Library\\rs2xml.jar
 file.reference.rs2xml.jar-1=C:\\Users\\Ihsan Maulana\\Documents\\Semester_5\\Implementasi Perangkat Lunak\\Tubes\\TubesPo1_Kelompok4\\Library\\rs2xml.jar
 file.reference.rs2xml.jar-2=F:\\IF UNJANI Sems.5\\IMPL\\Kelompok 1\\TubesPo1_Kelompok4\\Library\\rs2xml.jar
+file.reference.rs2xml.jar-3=C:\\Users\\ASUS\\Downloads\\TubesPo1_Kelompok4\\TubesPo1_Kelompok4\\Library\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -59,7 +63,11 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar-2}:\
     ${file.reference.mysql-connector-java-8.0.25.jar-2}:\
-    ${file.reference.rs2xml.jar-2}
+    ${file.reference.rs2xml.jar-2}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-3}:\
+    ${file.reference.mysql-connector-java-8.0.25.jar-3}:\
+    ${file.reference.rs2xml.jar-3}:\
+    ${file.reference.jcalendar-1.4.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
